2007-06-28  Scott Reeves <sreeves@novell.com> 

	* src/PreferencesDialog.cs, src/Preferences.cs,
	  data/glade/giver-prefs.glade, data/glade/Makefile.am,
	  data/glade/gravatar.gif: updated prefs dialog, read values

2007-06-28  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceInfo.cs, src/GiverMenuItem.cs, src/SendingHandler.cs:
	  Renamed Service to ServiceInfo
	* src/ServiceLocator.cs: Renamed Service to ServiceInfo and threaded
	  the resolver to get icons on a thread
	* src/Application.cs: Added stock quit menu item
	* src/Makefile.am: Added ServiceInfo
	* giver.mdp: Added ServiceInfo class

2007-06-28  Calvin Gaisford <calvinrg@gmail.com> 

	* src/RequestHandler.cs: updated to use save location 
	* src/GiverService.cs: added full name publish if the preference is set
	* src/Preferences.cs: added full name and save location

2007-06-27  Calvin Gaisford <calvinrg@gmail.com> 

	* src/Utilities.cs, src/ServiceLocator.cs, src/RequestHandler.cs,
	  src/GiverService.cs: Added uri and gravatar support
	* src/Preferences.cs: updated to use XML and saves it
	* giver.mdp: Added XML for preferences
	* src/PreferencesDialog.cs: debug

2007-06-27  Scott Reeves <sreeves@novell.com> 

	* src/PreferencesDialog.cs, src/Application.cs: preferences update

2007-06-27  Calvin Gaisford <calvinrg@gmail.com> 

	* src/Makefile.am, giver.mdp, configure.ac: removed evolution-sharp
	  dependency

2007-06-27  Calvin Gaisford <calvinrg@gmail.com> 

	* src/Application.cs: Fixed another anoying gui threading problem

2007-06-27  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceLocator.cs: Added protection for services
	* src/Application.cs: Removed Gtk.App stuff for Gnome.App stuff

2007-06-27  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs: added username and threaded the sending of
	  files
	* src/RequestHandler.cs, src/Protocol.cs: added username
	* src/Application.cs: Fixed some startup issues
	* src/Makefile.am: Fixed makefile issue with giver 256 icon
